fix: allow in-word breaks in infoboxes
prevents widther boxes if e. g. a long link is contained

--- a/modules/ext.OpenSemanticLab.LIMS/LimsInfoBox.css
+++ b/modules/ext.OpenSemanticLab.LIMS/LimsInfoBox.css
@@ -18,6 +18,7 @@ REL: modules/ext.OpenSemanticLab.LIMS/LimsInfoBox.css
     text-align: left !important;
     border-collapse: collapse;
     border-radius: 8px;
+    word-break: break-all; /*break long links and names.*/
 }
 
 .info_box th {
